--- a/waybar/style.css
+++ b/waybar/style.css
@@ -18,15 +18,6 @@ window#waybar.hidden {
     opacity: 0.2;
 }
 
-/*
-window#waybar.empty {
-    background-color: transparent;
-}
-window#waybar.solo {
-    background-color: #FFFFFF;
-}
-*/
-
 window#waybar.termite {
     background-color: #3F3F3F;
 }
@@ -36,6 +27,34 @@ window#waybar.chromium {
     border: none;
 }
 
+/* MODULE GROUPS */
+
+/* If workspaces is the leftmost module, omit left margin */
+.modules-left > widget:first-child > #workspaces {
+    margin-left: 0;
+}
+
+/* If workspaces is the rightmost module, omit right margin */
+.modules-right > widget:last-child > #workspaces {
+    margin-right: 0;
+}
+
+.modules-right {
+    background-color: #383c4a;
+    padding: 1px;
+}
+
+.modules-center {
+    background-color: #383c4a;
+    padding: 1px;
+}
+
+.modules-left {
+    padding: 1px;
+    background-color: #383c4a;
+}
+
+/* WORKSPACES */
 button {
     /* Use box-shadow instead of border so the text isn't offset */
     box-shadow: inset 0 -3px transparent;
@@ -47,11 +66,12 @@ button {
 /* https://github.com/Alexays/Waybar/wiki/FAQ#the-workspace-buttons-have-a-strange-hover-effect */
 button:hover {
     background: inherit;
-    box-shadow: inset 0 -3px #ffffff;
 }
 
 #workspaces button {
     padding: 0 5px;
+    margin-top: 2px;
+    margin-bottom: 2px;
     margin-right: 7px;
     margin-left: 7px;
     background-color: transparent;
@@ -64,9 +84,7 @@ button:hover {
 }
 
 #workspaces button.focused {
-    box-shadow: inset 0 -3px #ffffff;
-    background-color: transparent;
-    border-color: #ffffff; 
+    box-shadow: 0px 0px 2px #ffffff;
 }
 
 #workspaces button.urgent {
@@ -77,6 +95,8 @@ button:hover {
     background-color: #64727D;
     border-bottom: 3px solid #ffffff;
 }
+
+/* MODULES */
 
 #clock,
 #battery,
@@ -106,42 +126,14 @@ button:hover {
     background-color: #383c4a;
 }
 
-/* If workspaces is the leftmost module, omit left margin */
-.modules-left > widget:first-child > #workspaces {
-    margin-left: 0;
-    padding-right: 3px;
-}
-
-/* If workspaces is the rightmost module, omit right margin */
-.modules-right > widget:last-child > #workspaces {
-    margin-right: 0;
-}
-
-.modules-right {
-    background-color: #383c4a;
-    padding: 2px;
-}
-
-
-.modules-center {
-    background-color: #383c4a;
-}
 
 #clock {
     background: #383c4a;
     padding-left: 16px;
-    padding-right: 30px;
+    padding-right: 15px;
     border-radius: 10px 0px 0px 10px;
     transition: none;
     color: #ffffff;
-}
-
-#custom-weather {
-    padding-right: 16px;
-    border-radius: 0px 20px 20px 0px;
-    transition: none;
-    color: #ffffff;
-    background: #383c4a;
 }
 
 #battery {
@@ -247,10 +239,20 @@ label:focus {
 	background-color: transparent;
 }
 
+/* CUSTOME MODULES */
+
+#custom-weather {
+    padding-right: 16px;
+    border-radius: 0px 20px 20px 0px;
+    transition: none;
+    color: #ffffff;
+    background: #383c4a;
+}
+
 #custom-spotify {
     padding: 0 10px;
     margin: 0 4px;
-    background-color: transparent;
+    background-color: #383c4a;
     color: #ffffff;
 }
 
