--- a/waybar/style.css
+++ b/waybar/style.css
@@ -1,3 +1,5 @@
+@import "macchiato.css";
+
 * {
     /* `otf-font-awesome` is required to be installed for icons */
     font-family: FontAwesome, Roboto, Helvetica, Arial, sans-serif;
@@ -40,18 +42,18 @@ window#waybar.chromium {
 }
 
 .modules-right {
-    background-color: #383c4a;
+    background-color: @base;
     padding: 1px;
 }
 
 .modules-center {
-    background-color: #383c4a;
+    background-color: @base;
     padding: 1px;
 }
 
 .modules-left {
     padding: 1px;
-    background-color: #383c4a;
+    background-color: @base;
 }
 
 /* WORKSPACES */
@@ -75,16 +77,16 @@ button:hover {
     margin-right: 7px;
     margin-left: 7px;
     background-color: transparent;
-    color: #ffffff;
+    color: @sky;
     border-radius: 20px;
 }
 
 #workspaces button:hover {
-    background: rgba(0, 0, 0, 0.2);
+    background: @overlay0;
 }
 
 #workspaces button.focused {
-    box-shadow: 0px 0px 2px #ffffff;
+    color: @green;
 }
 
 #workspaces button.urgent {
@@ -113,38 +115,52 @@ button:hover {
 #mode,
 #idle_inhibitor,
 #scratchpad,
-#mpd {
+#mpd,
+#custom-spotify,
+#custom-weather,
+#custom-spotify,
+#custom-weather,
+#battery {
     padding: 0 10px;
-    color: #ffffff;
-    background-color: #383c4a;
+    color: @text;
+    background-color: transparent;
 }
 
 #window,
 #workspaces {
     margin: 0 4px;
     padding: 2px;
-    background-color: #383c4a;
 }
 
 
 #clock {
-    background: #383c4a;
     padding-left: 16px;
     padding-right: 15px;
     border-radius: 10px 0px 0px 10px;
     transition: none;
-    color: #ffffff;
 }
 
 #battery {
-    color: #ffffff;
+	color: @yellow;
 }
-
-#battery.charging, #battery.plugged {
-    color: #ffffff;
-    background-color: #26A65B;
+#disk {
+	color: @peach;
 }
-
+#temperature {
+	color: @red;
+}
+#memory {
+	color: @teal;
+}
+#cpu {
+	color: @green;
+}
+#network {
+	color: @lavender;
+}
+#pulseaudio {
+	color: @mauve;
+}
 @keyframes blink {
     to {
         background-color: #ffffff;
@@ -166,44 +182,10 @@ label:focus {
     background-color: #000000;
 }
 
-#cpu {
-    background-color: transparent;
-    color: #ffffff;
-}
-
-#memory {
-    background-color: transparent;   
-    color: #ffffff;
-}
-
-#disk {
-    background-color: transparent;   
-    color: #ffffff;
-}
-
-#network {
-    background-color: transparent;   
-    color: #ffffff;
-}
-
 #network.disconnected {
     background-color: #f53c3c;
 }
 
-#pulseaudio {
-    background-color: transparent;   
-    color: #ffffff;
-}
-
-#pulseaudio.muted {
-    background-color: transparent;   
-    color: #ffffff;
-}
-
-#temperature {
-    background-color: transparent;   
-    color: #ffffff;
-}
 
 #temperature.critical {
     background-color: #eb4d4b;
@@ -245,14 +227,10 @@ label:focus {
     padding-right: 16px;
     border-radius: 0px 20px 20px 0px;
     transition: none;
-    color: #ffffff;
-    background: #383c4a;
 }
 
 #custom-spotify {
     padding: 0 10px;
     margin: 0 4px;
-    background-color: #383c4a;
-    color: #ffffff;
 }
 
