--- a/wofi/style.css
+++ b/wofi/style.css
@@ -2,7 +2,6 @@
 
 #window {
     padding: 2px;
-    border: 5px solid @crust;
     background-color: @base;
     border-radius: 10px;
     color: @text
@@ -14,7 +13,7 @@
 
 #input {
 	background-color: @surface0;
-	border-color: @green;
+	border-color: @flamingo;
 }
 
 #entry {
